--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@react-google-maps/api": "^2.18.1",
     "@tanstack/react-query": "4.28",
     "@tanstack/react-query-devtools": "4.28",
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.10.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/node": "^20.4.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
