--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-typeahead": "^6.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.10.0",
+    "use-places-autocomplete": "^4.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
